
2010-03-14  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: removed badges.

2010-03-07  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Speed up category view
	* CategoryViewController: fix a display bug that prevented the badges from
	  refreshing in some cases.
	* misc: More intuitive task view. When viewing tasks belonging to a category,
	  subtasks that belong to that category are also shown, except if one of
	  their ancestors belongs to the same category. The previous behaviour was
	  to only show top-level tasks belonging to the category, so people using
	  subcategories for subtasks would not see anything when selecting the
	  subcategory...
	* misc: Badges now only show total count and due soon count, for performance
	  reasons.

2010-02-28  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: When creating a subtask, the navigation bar would read "New task"
	  instead of "New subtask".

2010-02-21  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Add Russian translation, thanks to Nikolay Parukhin

2009-12-27  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Support for hierarchical tasks
	* misc: Support for basic effort tracking

2009-12-24  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Support for multiple desktop files.

2009-12-22  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* BadgedCell.m: Fix categories indentation level.

==== 1.2: 2009-12-16 ====

2009-10-19  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* Now needs iPhone OS 3.0 at least.
	* misc: Add badges in the category view to show number of (not started/started/
	  due soon/overdue) tasks in this category.
	* misc: Allow landscape mode in task details view.
	* misc: Fix a bug when restoring the position at launch.
