@@ -1,6 +1,8 @@
 
 2010-03-14  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
 	* misc: removed badges.
+	* misc: When selecting a category, also show tasks that only belong to one
+	  of their subcategories.
 
 2010-03-07  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
 	* misc: Speed up category view
